<resources>
    <string name="app_name">MVP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_empty_login">Username and password are mandatory</string>
    <string name="login_failed">Login failed. Check your credentials and try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="comments_num" formatted="false">Comments: %d</string>
    <string name="error_boats">Greska kod dohvata</string>
</resources>
